fix removeReferrer error on FieldIterator -> clear referent of garbage soft/weak reference